--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,7 @@
 [ ] Automatic scroll down when getting to a song that is offscreen (maybe two before ?)
 [x] Store the songs as []^SongData pointing to a []SongData array
 [x] Store a file for session data
+[x] Hot reloading
 
 UI:
 [ ] UI for adding a song to the list
